# Extended

./: .gitignore  README.md
adl/: adr-0001-geometry-shaders.md
adr/: adr-0001-geometry-shaders.md
src/c/: CMakeLists.txt  build.sh
src/c/inc/: ankura.h
src/c/inc/api/: ak_application.h  ak_application_parameters.h  ~api.h  ~core.h  ~display.h
src/c/inc/api/display/: ak_display_adapter.h  ak_display_device.h  ak_display_parameters.h  ak_display_window.h  ak_display_window_descriptor.h  ak_display_window_mode.h  window.h  window_states.h  ~display.h
src/c/inc/api/~core/: _core.h  i16.h  i32.h  i64.h  i8.h  rectangle_u32.h  size_i32.h  size_u32.h  target_platform.h  u16.h  u32.h  u64.h  u8.h
src/c/src/: ankura.c
src/dotnet/: Extended.sln  Extended.sln.DotSettings
src/dotnet/analysis/: CodeAnalysis.props
src/dotnet/analysis/StyleCop/: StyleCop-Default.ruleset  StyleCop-NoDocumentation.ruleset  StyleCop.json
src/dotnet/projects/: Common.props
src/dotnet/projects/example/: Directory.Build.props
src/dotnet/projects/example/E01-Triangle/: E01-Triangle.csproj
src/dotnet/projects/example/VectorVenture/: VectorVenture.csproj
src/dotnet/projects/production/: Directory.Build.props
src/dotnet/projects/production/Extended.Framework/: BlittableBoolean.cs  Disposable.cs  Extended.Framework.csproj  (+1 more)
src/dotnet/projects/production/Extended.Framework.MonoGame.DesktopOpenGL/: Extended.Framework.MonoGame.DesktopOpenGL.csproj  Extended.Framework.MonoGame.DesktopOpenGL.csproj.DotSettings
src/dotnet/projects/test/: Directory.Build.props
(+111 files in other folders)
